only shrink to used area in text export, fdo#46230, related n#677811