sc/source/ui/app/transobj.cxx
@@ -172,9 +172,6 @@ ScTransferObj::ScTransferObj( ScDocument* pClipDoc, const TransferableObjectDesc
         }
     OSL_ENSURE(!bFirst, "no sheet selected");
 
-    if (!pDoc->GetClipParam().isMultiRange() && nTab1 == nTab2)
-        pDoc->ShrinkToDataArea( nTab1, nCol1, nRow1, nCol2, nRow2 );
-
     //  only limit to used cells if whole sheet was marked
     //  (so empty cell areas can be copied)
     if ( nCol2>=MAXCOL && nRow2>=MAXROW )
